# better-limit-reader-rs

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md  build.sh
.github/workflows/: ci.yml
examples/: read_limited.rs  reader-example.rs
src/: error.rs  lib.rs  readable.rs
