[package]
name = "better-limit-reader"
version = "0.1.0"
authors = ["Michael de Silva <michael@cyberdynea.io"]
description = "Rust SDK for 1Password Connect"
readme = "README.md"
homepage = "https://github.com/bsodmike/better-limit-reader-rs"
repository = "https://github.com/bsodmike/better-limit-reader-rs"
license = "MIT"
keywords = ["limit-reader"]
edition = "2021"

[dependencies]
anyhow = "1.0.86"
flate2 = "1.0.33"

[dev-dependencies]
tempfile = "3.12.0"