[package]
name = "better-limit-reader"
version = "1.0.1"
authors = ["Michael de Silva <michael@cyberdynea.io>"]
description = "Configurable limit reader that limits the number of bytes read from an underlying reader, supporting decompression from Gzip and Zlib compressed via `flate2`"
readme = "README.md"
homepage = "https://github.com/bsodmike/better-limit-reader-rs"
repository = "https://github.com/bsodmike/better-limit-reader-rs"
license = "MIT OR Apache-2.0"
keywords = ["limit-reader"]
autobins = false
edition = "2021"

[dependencies]
flate2 = "1.0.33"
derive_builder = "0.20.1"

[dev-dependencies]
tempfile = "3.12.0"
